// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <Img /> should render correctly 1`] = `
<img
  alt={undefined}
  role="presentation"
  src="img.png"
/>
`;

exports[`component <Img /> should render with alt text 1`] = `
<img
  alt="image description"
  role={false}
  src="img.png"
/>
`;
